# pydantic-storage

./: .gitignore  README.md  pyproject.toml  users.json
src/_services/_models/_typed/: __init__.py
src/json_file_storage/: __init__.py
src/json_file_storage/_abstractions/: __init__.py  _abstract_file_manager.py  _abstract_file_storage.py  _abstract_pydantic_model_serializer.py  abstract_file_storage.py  abstract_json_file_manager.py  abstract_json_file_storage.py
src/json_file_storage/_services/: __init__.py  _json_file_manager.py
src/json_file_storage/_services/_managers/: _json_file_manager.py
src/json_file_storage/_services/_storages/: _json_file_storage.py
src/json_file_storage/exceptions/: __init__.py  _json_decode_error.py  _validation_error.py  json_encode_error.py  json_encoder_error.py
src/json_file_storage/models/pydantic/: __init__.py  _models.py
src/json_file_storage/models/typed/: __init__.py  _types.py  meta_data_dict.py
src/json_file_storage/serializers/: __init__.py  _pydantic_model_serializer.py
src/json_file_storage/types/: __init__.py
src/pydantic_storage/: __init__.py
src/pydantic_storage/_abstractions/: __init__.py  _abstract_file_manager.py  _abstract_file_storage.py
src/pydantic_storage/_abstractions/_managers/: _base_file_manager.py
src/pydantic_storage/_abstractions/_storages/: _base_file_storage.py
src/pydantic_storage/_services/: __init__.py
src/pydantic_storage/_services/_managers/: _base_file_manager.py  _file_manager.py  _json_file_manager.py
src/pydantic_storage/_services/_storages/: _base_file_storage.py  _file_storage.py  _json_file_storage.py
src/pydantic_storage/abstractions/: __init__.py
src/pydantic_storage/abstractions/_managers/: _base_file_manager.py  _base_manager.py
src/pydantic_storage/abstractions/_storages/: _base_file_storage.py
src/pydantic_storage/backends/: __init__.py
src/pydantic_storage/backends/_file_backends/: _json_file_storage.py
src/pydantic_storage/exceptions/: __init__.py  _duplicate_entry_error.py  _file_data_load_error.py
src/pydantic_storage/models/: __init__.py  _models.py
src/pydantic_storage/types/: __init__.py  _model_dict_types.py
tests/: conftest.py  test_base_file_manager.py  test_base_file_storage.py  test_file_manager.py  test_file_storage.py  test_json_file_manager.py  test_json_file_storage.py  test_models.py
tests/mocks/models/: __init__.py  fake_user.py
tests/models/: test_models.py
tests/services/managers/: test_file_manager.py
tests/services/storages/: test_file_storage.py
tests/test_helpers/: __init__.py
