[project]
name = "json-file-storage"
version = "0.1.0"
description = """
A simple JSON-based storage backend for Pydantic models with metadata and record management.
"""
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "shaileshpandit141", email = "shaileshpandit141@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.11.7"]

[project.scripts]
json-file-storage = "json_file_storage:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["json-file-storage"]

[tool.uv.sources]
json-file-storage = { workspace = true }

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[tool.setuptools.package-data]
"json_file_storage" = ["py.typed"]

[project.urls]
Homepage = "https://github.com/shaileshpandit141/json-file-storage"
Repository = "https://github.com/shaileshpandit141/json-file-storage"
