# ==========================
# Main project configuration 
# ==========================

[project]
name = "json-file-storage"
version = "0.1.0"
description = """
A simple JSON-based storage backend for Pydantic models with metadata and record management.
"""
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "shaileshpandit141", email = "shaileshpandit141@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.11.7"]

# CLI scripts entry point configuration
# -------------------------------------
[project.scripts]
json-file-storage = "json_file_storage:entry_point" # CLI entry point

# ==========================
# Build system configuration
# ==========================
[build-system]
requires = ["hatchling"]          # Build tool requirement
build-backend = "hatchling.build" # Build backend

# =================
# Dependency groups
# =================
[dependency-groups]
dev = ["json-file-storage"] # Development dependency group

# ===============
# UV tool sources
# ===============
[tool.uv.sources]
json-file-storage = { workspace = true }

# =====================
# Optional dependencies
# =====================
[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"] # Optional dev dependencies

# ============
# Package data
# ============
[tool.setuptools.package-data]
"json_file_storage" = ["py.typed"] # Include type information

# ============
# Project URLs
# ============
[project.urls]
Homepage = "https://github.com/shaileshpandit141/json-file-storage"
Repository = "https://github.com/shaileshpandit141/json-file-storage"
Issues = "https://github.com/shaileshpandit141/json-file-storage/issues"
