# ==========================
# Main project configuration 
# ==========================

[project]
name = "pydantic-storage"
version = "0.1.0"
description = """"A lightweight, type-safe storage system for Pydantic models 
with support for multiple backends and persistent storage."""
license = { file = "LICENSE" }
authors = [
    { name = "shaileshpandit141", email = "shaileshpandit141@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
  "iniconfig>=2.1.0",
  "pydantic>=2.11.7",
]

# CLI scripts entry point configuration
# -------------------------------------
[project.scripts]
pydantic-storage = "pydantic_storage:entry_point" # CLI entry point

# ==========================
# Build system configuration
# ==========================
[build-system]
requires = ["hatchling"]          # Build tool requirement
build-backend = "hatchling.build" # Build backend

# =================
# Dependency groups
# =================
[dependency-groups]
dev = [
  "autofmt>=0.1.0",
  "pydantic-storage",
  "pytest>=8.4.1",
] # Development dependency group

# ===============
# UV tool sources
# ===============
[tool.uv.sources]
pydantic-storage = { workspace = true }

# =====================
# Optional dependencies
# =====================
[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"] # Optional dev dependencies

# ============
# Package data
# ============
[tool.setuptools.package-data]
"pydantic_storage" = ["py.typed"] # Include type information

# ============
# Project URLs
# ============
[project.urls]
Homepage = "https://github.com/shaileshpandit141/pydantic-storage"
Repository = "https://github.com/shaileshpandit141/pydantic-storage"
Issues = "https://github.com/shaileshpandit141/pydantic-storage/issues"

# ===================
# Tool Configurations
# ===================

# Disable ruff S101 rule for test casecases
# -----------------------------------------
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

# ====================
# Pytest configuration
# ====================
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ==========================
# Autofmt tool configuration
# ==========================
[tool.autofmt]
watch_path = "."
formatters = ["black", "ruff"]
cooldown_seconds = 1.0
